--- a/frontend/src/views/components/Partners/partner.css
+++ b/frontend/src/views/components/Partners/partner.css
@@ -9,7 +9,7 @@
   background: rgba(5, 62, 132, 0.1);
 
   /* Rounded corners per sides specified */
-  border-top-right-radius: 30px;
+  border-top-right-radius: 0px;
   border-bottom-right-radius: 30px;
   border-bottom-left-radius: 30px;
 
@@ -88,36 +88,92 @@
 }
 
 /*-----------------------------------*/
+/*our client box*/
 
 .outer {
   margin-top: 50px;
-  border: 1px solid black;
+  /* border: 1px solid black; */
+   border: none;
   display: flex;
   width: 431px;
   height: 60px;
-  overflow: hidden;
+  overflow: hidden; 
+  justify-content:flex-end;
+  margin-left: 53.51rem;
 }
 
-.inner-1 {
-  background-color: violet;
+.inner-one {
+  background-color:rgba(5, 62, 132, 1);
   /* border: 1px solid black; */
+  border: none;
   width: 50%;
   height: 60px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
+ 
+  
 }
+.clients-text {
+  /* Layout */
+  width: 180px;
+  height: 29px;
+  opacity: 1;
 
-.inner-2 {
+  /* Positioning */
+  display: flex;
+  justify-content: center;  
+  align-items: center;      
+
+  /* Typography */
+  font-family: "Axiforma", sans-serif;
+  font-weight: 600; 
+  font-size: 25px;
+  /* line-height: 28.8px; */
+  /* letter-spacing: 0.14px; */
+  color: white;
+  text-align: center;
+  margin-top: 13px;
+  margin-left: 10px;
+}
+.inner-two {
   background-color: white;
   height: 60px;
   width: 100%;
   border-bottom-left-radius: 20px;
   z-index: 0;
 }
-.z {
+.overlay {
   width: 50%;
   height: 60px;
   position: relative;
-  background-color: violet;
+  background-color: rgba(5, 62, 132, 1);
   z-index: 12;
+}
+
+/* mirror version */
+.outer.mirror .inner-one {
+  border-top-left-radius: 20px;       /* remove old rounding */
+  border-top-right-radius: 20px;   /* keep right rounded */
+}
+
+.outer.mirror .inner-two {
+  border-bottom-left-radius: 0;    /* remove old rounding */
+  border-bottom-right-radius: 20px;/* mirror rounding */
+}
+
+
+/*40 + insurance*/
+.partner-text {
+   position: absolute; /* anchor to the parent box */
+   width: 208px;
+   height: 26px;
+ /* font-weight: 400px; */
+  top: 8px;
+  right: 12px;
+  z-index: 1;         /* keep above logos if needed */
+  padding: 6px 10px;
+  border-radius: 12px;
+  /* font-size: 14px; */
+  line-height: 0.5;
+  size: 18px;
 }
