--- a/frontend/src/views/components/Footer/Footer.css
+++ b/frontend/src/views/components/Footer/Footer.css
@@ -275,6 +275,7 @@
   margin-left: -1.05%;
   margin-right: 22.83%;
   max-height: 24px;
+  text-decoration: none;
 }
 
 .footer .text-wrapper-22 {
@@ -710,17 +711,17 @@
 
 .footer .phone {
   height: 24px;
-  left: 651px;
+  left: 60.2rem;
   position: absolute;
-  top: 361px;
+  top: 363px;
   width: 20px;
 }
 
 .footer .mail {
   height: 20px;
-  left: 828px;
+  left: 79.4rem;
   position: absolute;
-  top: 361px;
+  top: 364px;
   width: 20px;
 }
 
@@ -750,7 +751,7 @@
   height: 50px;
   left: calc(50% + 337px);
   position: absolute;
-  top: 385px;
+  top: 386px;
   width: 249px;
 }
 
