--- a/frontend/src/views/components/Footer/Footer.css
+++ b/frontend/src/views/components/Footer/Footer.css
@@ -514,7 +514,7 @@
   font-family: "Axiforma-Medium", Helvetica, Arial, sans-serif;
   font-size: 16px;
   font-weight: 500;
-  left: 193px;
+  left: 235px;
   letter-spacing: 0.14px;
   line-height: 23.2px;
   position: absolute;
@@ -527,7 +527,7 @@
   font-family: "Axiforma-Medium", Helvetica, Arial, sans-serif;
   font-size: 16px;
   font-weight: 500;
-  left: 0;
+  left: 10px;
   letter-spacing: 0.14px;
   line-height: 23.2px;
   position: absolute;
@@ -540,7 +540,7 @@
   font-family: "Axiforma-Medium", Helvetica, Arial, sans-serif;
   font-size: 16px;
   font-weight: 400;
-  left: 5.78%;
+  left: 25%;
   letter-spacing: 0;
   line-height: 28px;
   position: absolute;
@@ -564,7 +564,7 @@
   font-family: "Axiforma-Medium", Helvetica, Arial, sans-serif;
   font-size: 16px;
   font-weight: 400;
-  left: 38.59%;
+  left: 43.59%;
   letter-spacing: 0;
   line-height: 28px;
   position: absolute;
@@ -711,7 +711,7 @@
 
 .footer .phone {
   height: 24px;
-  left: 40rem;
+  left: 41.4%;
   position: absolute;
   top: 363px;
   width: 20px;
@@ -719,7 +719,7 @@
 
 .footer .mail {
   height: 20px;
-  left: 51.4rem;
+  left: 55.2%;
   position: absolute;
   top: 364px;
   width: 20px;
@@ -729,22 +729,28 @@
   background-color: #ffffff;
   border: 0.67px solid;
   border-color: #dee2e6;
-  border-radius: 6px;
+  border-radius: 4px;
   color: #757575;
   font-family: "Axiforma-Regular", Helvetica, Arial, sans-serif;
   font-size: 16px;
   font-weight: 400;
-  height: 33px;
-  left: 63.25%;
+  height: 38px;
+  left: 61.3%;
   letter-spacing: 0;
   line-height: 16px;
-  margin-left: 152px;
+  margin-left: 0px;    
   margin-top: 6.5px;
   overflow: hidden;
   padding: 0;
   position: absolute;
-  top: 162px;
-  width: 20.9%;
+  top: 158px;
+  width: 9.9%;
+}
+
+footer .input::placeholder {
+  text-align: center;
+  vertical-align: middle;
+  font: Axiforma;
 }
 
 .footer .footer-social-media {
